# nixco

./: .editorconfig  .gitignore  CMakeLists.txt  flake-module.nix  flake.nix  justfile  meson.build  package.nix  treefmt.nix
examples/: access-switch.nix  basic-switch.nix
include/: cli_parser.h  config.h  strategy.h  transport.h  version.h.in
lib/: default.nix  render.nix  types.nix
lib/models/: 9200.nix  C9200L-24P-4G.nix  default.nix
lib/renderer/: default.nix  renderACLs.nix  renderEEM.nix  renderGlobalIPSettings.nix  renderGlobalIPv6Settings.nix  renderInterface.nix  renderRoute.nix  renderSwitchport.nix
modules/: acl.nix  assertions.nix  banner.nix  default-interface.nix  default.nix  device.nix  eem.nix  interfaces.nix  ip.nix  ipv6.nix  keys.nix  routing.nix  vlan.nix
nix/flake-parts/: devshell.nix  export-flake-module.nix  flake-module.nix  package.nix  systems.nix
nix/lib/: eval.nix  types.nix
nix/lib/_devices/: C9200L-24P-4G.nix  ISR4331.nix
nix/lib/renderer/: acl.nix  eem.nix  interface.nix  ipv4.nix  ipv6.nix  keys.nix  render.nix  routing.nix  users.nix  utils.nix
nix/modules/: acl.nix  assertions.nix  banner.nix  device.nix  eem.nix  flakecheck.nix  http.nix  ip.nix  ipv6.nix  keys.nix  misc.nix  nixco-module.nix  routing.nix  users.nix  vlan.nix
nix/modules/interfaces/: _l2-interfaces.nix  interfaces.nix  l2-interfaces.nix  l3-interfaces.nix
nix/modules/ip/: http.nix  ip.nix
src/: cli_parser.cpp  main.cpp  serialtransport.cpp  sshtransport.cpp  strategy.cpp  transport.cpp
templates/default/: default.nix  flake.nix
templates/single-device/: device.nix  flake.nix
